--- a/templates/_main/api.html.sm.html
+++ b/templates/_main/api.html.sm.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML Basic 1.1//EN"
+    "http://www.w3.org/TR/xhtml-basic/xhtml-basic11.dtd">
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -7,8 +9,7 @@
         <meta name="keywords" content="{$page->keywords}">
         <meta name="description" content="{$page->description}">
         <meta name="robots" content="noindex, nofollow">
-        <link rel="icon" href="/favicon.ico" type="image/x-icon">
-        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <script type="text/javascript" src="http://yandex.st/jquery/1.7.2/jquery.min.js"></script>
         <script type="text/javascript" src="/js/jquery.simplemodal.1.4.min.js"></script>
         <script type="text/javascript" src="/js/api.js?v={$page->files_ver}"></script>
