--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -9,7 +9,6 @@
         <link rel="stylesheet" href="/css/{$page->mainfile_css}" type="text/css" media="screen, projection, print" />
         <!--[if lte IE 6]><link rel="stylesheet" href="/css/style_ie.css" type="text/css" media="screen, projection, print" /><![endif]-->
         <meta name="robots" content="index, follow" />
-        <meta name="revisit" content="7 days" />
         <meta name="revisit-after" content="7 days" />
         <link rel="icon" href="/favicon.ico" type="image/x-icon" />
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
@@ -36,7 +35,7 @@
         {if $page->globalsettings.key_bing}<meta name="msvalidate.01" content="{$page->globalsettings.key_bing}" />{/if}
         {if $page->globalsettings.key_yahoo}<meta name="y_key" content="{$page->globalsettings.key_yahoo}" />{/if}
         {/if}
-        <script src="http://api-maps.yandex.ru/2.0/?coordorder=longlat&load=package.full&wizard=constructor&lang=ru-RU" type="text/javascript"></script>
+        <script src="http://api-maps.yandex.ru/2.0/?coordorder=longlat&amp;load=package.full&amp;wizard=constructor&amp;lang=ru-RU" type="text/javascript"></script>
         <link rel="alternate" type="application/rss+xml" title="RSS blog" href="{$page->globalsettings.main_rss}" />
     </head>
 
@@ -56,7 +55,7 @@
                     <li class="navigate"><a href="/about/" title="О проекте">О проекте</a></li>
                     <li>
                         <form method="get" action="/search/">
-                            <input type="q" id="search_mainform_q" name="q" value="" placeholder="Поиск" />
+                            <input type="text" id="search_mainform_q" name="q" value="" placeholder="Поиск" />
                         </form>
                     </li>
                     <li><a id="show_auth_form" href="/sign/in/" title="Вход">&#x25bc;</a></li>
