--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -6,8 +6,6 @@
         <title>{$page->title}</title>
         <meta name="keywords" content="{$page->keywords}" />
         <meta name="description" content="{$page->description}" />
-        <link rel="stylesheet" href="/css/{$page->mainfile_css}" type="text/css" media="screen, projection, print" />
-        <!--[if lte IE 6]><link rel="stylesheet" href="/css/style_ie.css" type="text/css" media="screen, projection, print" /><![endif]-->
         <meta name="robots" content="index, follow" />
         <meta name="revisit-after" content="7 days" />
         <link rel="icon" href="/favicon.ico" type="image/x-icon" />
@@ -15,6 +13,9 @@
         <link rel="search" href="/search/" />
         <link rel="copyright" href="/about/" />
         <link rel="start" href="http://{$page->basepath}/" />
+        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans&subset=latin,cyrillic-ext,cyrillic" type="text/css">
+        <link rel="stylesheet" href="/css/{$page->mainfile_css}" type="text/css" media="screen, projection, print" />
+        <!--[if lte IE 6]><link rel="stylesheet" href="/css/style_ie.css" type="text/css" media="screen, projection, print" /><![endif]-->
         <script type="text/javascript" src="http://yandex.st/jquery/1.7.2/jquery.min.js"></script>
         <script type="text/javascript" src="http://{$page->basepath}/js/jquery.simplemodal.1.4.min.js"></script>
         {if $page->canonical}
