--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -13,8 +13,8 @@
         <link rel="search" href="/search/" />
         <link rel="copyright" href="/about/" />
         <link rel="start" href="http://{$page->basepath}/" />
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans&subset=latin,cyrillic-ext,cyrillic" type="text/css">
-        <link rel="stylesheet" href="/css/{$page->mainfile_css}" type="text/css" media="screen, projection, print" />
+        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans&amp;subset=latin,cyrillic-ext,cyrillic" type="text/css"/>
+        <link rel="stylesheet" href="/css/{$page->mainfile_css}" type="text/css" media="screen, projection, print"/>
         <!--[if lte IE 6]><link rel="stylesheet" href="/css/style_ie.css" type="text/css" media="screen, projection, print" /><![endif]-->
         <script type="text/javascript" src="http://yandex.st/jquery/1.7.2/jquery.min.js"></script>
         <script type="text/javascript" src="http://{$page->basepath}/js/jquery.simplemodal.1.4.min.js"></script>
