--- a/css/common.v2.1.css
+++ b/css/common.v2.1.css
@@ -444,7 +444,8 @@ ul {
 .hiddenedit_active {
     border:1px solid #829C8F;
     background-color: #D4FFE9;
-    width: 100%
+    color:#000;
+    width:100%
 }
 .formhandler {
 
