--- a/css/common.v2.1.css
+++ b/css/common.v2.1.css
@@ -36,7 +36,7 @@ header, nav, section, article, aside, footer {
     display: block;
 }
 body {
-    font-family: 'Open Sans', Arial, Tahoma, Verdana, sans-serif;
+    font-family: 'Open Sans', Verdana, Arial, Tahoma, sans-serif;
     font-size: 14px;
     height: 100%;
     background: #fff;
@@ -645,7 +645,24 @@ textarea.feedinput {
     #mainmenu, .points_selector {
         display:none;
     }
+    #footer_conters {
+        content: ' ';
+    }
     #header {
         height:150px;
+    }
+    h1, h2 {
+        color:#000;
+        background:none;
+    }
+    #city_path {
+        color:#292929;
+        background:#fff;
+    }
+    img.link_external {
+        display:none;
+    }
+    .objlink {
+        border:none;
     }
 }
