--- a/templates/_pages/pagecity.show.sm.html
+++ b/templates/_pages/pagecity.show.sm.html
@@ -75,14 +75,13 @@
             <td>
                 <a href="object{$item.pt_id}.html" class="objlink" title="подробно: {$item.pt_name}"><strong>{$item.pt_name}</strong></a>
                 <a href="object{$item.pt_id}.html" title="{$item.pt_name}, открыть в новом окне" rel="external">
-                    <img src="/img/new-window.png" alt=">" />
+                    <img src="/img/new-window.png" alt=">" class="link_external" />
                 </a>
                 <br />
                 <span class="point_short">{$item.short}</span>
                 <span class="hidden_overflow_bottom"></span>
             </td>
             <td class="obj_additional">
-                <span class="point_typename">{if $item.tp_name}{$item.tp_name}{else}другое{/if}</span>
                 {if $item.gps_dec}<br /><span class="point_gpsshort">{$item.gps_dec}&nbsp;</span>{/if}
                 <span class="hidden_overflow_bottom"></span>
             </td>
@@ -126,13 +125,12 @@
             </td>
             <td>
                 <a href="object{$item.pt_id}.html" class="objlink" title="подробно: {$item.pt_name}"><strong>{$item.pt_name}</strong></a>
-                <a href="object{$item.pt_id}.html" title="{$item.pt_name}, открыть в новом окне" rel="external"><img src="/img/new-window.png" alt=">" /></a>
+                <a href="object{$item.pt_id}.html" title="{$item.pt_name}, открыть в новом окне" rel="external"><img src="/img/new-window.png" alt=">" class="link_external" /></a>
                 <br />
                 <span class="point_short">{$item.short}</span>
                 <span class="hidden_overflow_bottom"></span>
             </td>
             <td class="obj_additional">
-                <span class="point_typename">{if $item.tp_name}{$item.tp_name}{else}другое{/if}</span>
                 {if $item.gps_dec}<br /><span class="point_gpsshort">{$item.gps_dec}</span>{/if}
                 <span class="hidden_overflow_bottom"></span>
             </td>
