--- a/templates/_pages/pagepoint.sm.html
+++ b/templates/_pages/pagepoint.sm.html
@@ -11,8 +11,8 @@
     {$object.pt_description}
     <p><a href="." id="page_point_link_back" title="перейти к достопримечательностям {$city.pc_inwheretext}">&larr; достопримечательности {$city.pc_inwheretext}</a></p>
 </div>
-
-<hr />
+<div id="widget_photos" style=""></div>
+<hr style="clear:both;" />
 {if $object.pt_adress || $object.pt_worktime || $object.pt_website || $object.pt_email || $object.pt_phone}
 <ul id="object_contacts">
     {if $object.pt_adress}
@@ -38,7 +38,12 @@
 <input type="hidden" id="mapobj_pt_zoom" value="{$object.map_zoom}" />
 <input type="hidden" id="mapobj_pt_name" value="{$object.pt_name}" />
 <input type="hidden" id="mapobj_pt_type_pic" value="{$object.tp_icon}" />
+<input type="hidden" id="pan_sw_lat" value="{$object.sw_ne.sw.lat}" />
+<input type="hidden" id="pan_sw_lon" value="{$object.sw_ne.sw.lon}" />
+<input type="hidden" id="pan_ne_lat" value="{$object.sw_ne.ne.lat}" />
+<input type="hidden" id="pan_ne_lon" value="{$object.sw_ne.ne.lon}" />
 <script type="text/javascript" src="/js/map_page_point.js"></script>
+<script type="text/javascript" src="/js/panoramio_page_point.js"></script>
 {/if}
 <div style="height:25px;overflow:hidden;margin: 10px;">
     <script type="text/javascript" src="//yandex.st/share/share.js" charset="utf-8"></script>
