--- a/templates/search/search.sm.html
+++ b/templates/search/search.sm.html
@@ -1,6 +1,5 @@
 <style>
     #searchrorm_form {
-        background-color: #E6EBD9;
         margin:1px;
     }
     #searchform_input {
@@ -53,23 +52,34 @@
     }
 </style>
 <form method="get" id="searchrorm_form">
+    <a href="http://yandex.ru/"><img src="/img/yandex.png" alt="Поиск от Яндекс" style="vertical-align:middle" /></a>
     <input type="text" id="searchform_input" name="q" value="{$search}" />
     <input type="submit" id="searchform_submit" value="Искать" />
     {if $error}<p style="color:red;margin:5px;">{$error}</p>{/if}
 </form>
 
-<hr style="margin-bottom:10px;" />
 {if $search && !$error}
-<p><strong>Результаты поиска</strong></p>
+<h2>Результаты поиска</h2>
 
 {if $result}
-<ul>
+<ul style="margin:1em;">
     {foreach from=$result item=res}
-    <li><a href="{$res.url}/">{$res.title}</a>
-        <br><span style="color:#aaa;font-size: 80%">{$res.descr}</span>
+    <li><a href="{$res.url}">{$res.title}</a>
+        <br><span style="color:#aaa;font-size: 90%">{$res.descr}</span>
     </li>
     {/foreach}
 </ul>
+<p>
+    Всего найдено: {$meta.pages_all}
+    <br/>
+    {if ($meta.page != 0)}
+    <a href="?page={$meta.page - 1}&q={$meta.query}">&#8592; предыдущая</a>
+    {/if}
+    страница {$meta.page + 1}
+    {if ($meta.pages_all > ($meta.page + 1) * $meta.pages)}
+    <a href="?page={$meta.page + 1}&q={$meta.query}">следующая &#8594;</a>
+    {/if}
+</p>
 {else}
 <p>Увы, по запросу "{$search}" ничего найти не удалось</p>
 {/if}
@@ -80,6 +90,6 @@
     <br/>
     Просто введите в поле выше название населённого пункта или региона, куда планируете поездку и нажмите кнопку "Искать".
     <br/>
-    Дополнительные слова ("достопримечательности" и т. п.) вводить не нужно.
+    Дополнительные слова ("достопримечательности" и т. п.) вводить не обязательно.
 </p>
 {/if}
