--- a/templates/_pages/pagecity.show.sm.html
+++ b/templates/_pages/pagecity.show.sm.html
@@ -11,10 +11,14 @@
     {if $city.pc_city_id > 0}
     <a id="city_map_link" href="map.html" title="Большая карта достопримечательностей {$city.pc_inwheretext}">на весь экран</a>
     {/if}
-    <div id="city_map_weather" data-lat="{$city.pc_latitude}" data-lon="{$city.pc_longitude}"></div>
 </div>
 {/if}
-<div id="citytext">{$city.pc_text}</div>
+<div id="citytext">
+    <div class="city_weather" data-lat="{$city.pc_latitude}" data-lon="{$city.pc_longitude}" title="погодные условия">
+        <img src="/img/preloader/horizontal.gif" title="идет загрузка погоды" alt="идет загрузка" style="vertical-align: middle" />
+    </div>
+    {$city.pc_text}
+</div>
 
 {if $city.region_in}
 <div id="city_inners" class="city_nearmenu">
