--- a/templates/index.html/index.sm.html
+++ b/templates/index.html/index.sm.html
@@ -1,4 +1,4 @@
 <h2>Справочник культурно-исторических достопримечательностей</h2>
 <div>{$hello_text}</div>
 <hr style="clear:both" />
-<p>На сайте можно найти информацию о {$stat}</p>
+<p>Собранная на нашем сайте интересная информация о более чем {$stat} поможет выбрать именно тот туристический маршрут, который вам принесет наибольшее удовлетворение.</p>
