--- a/templates/index.html/index.sm.html
+++ b/templates/index.html/index.sm.html
@@ -35,6 +35,8 @@
     {/foreach}
 </div>
 <hr style="clear:both" />
+<div id="yandex_ad"></div>
+<script type="text/javascript" src="/js/adv_city.js"></script>
 <style>
     h3 {
         color:#fff;
