--- a/templates/_admin/stat_yandex.sm.html
+++ b/templates/_admin/stat_yandex.sm.html
@@ -2,6 +2,12 @@
 <h3>{$title}</h3>
 
 <div style="width:200px;float:right;text-align:center">
+    <p>Отчёты в кэше</p>
+    <ol style="text-align:left;">
+        {foreach from=$reports item=rep}
+        <li>{$rep.ReportID}: {$rep.StatusReport}</li>
+        {/foreach}
+    </ol>
     <form method="post">
         <input type="submit" name="do_reload_full" value="Перезапуск полный" />
         <input type="submit" name="do_reload_stat" value="Сброс статистики" />
