Отображение мета-информации о городах

--- a/templates/_pages/pagecity.show.sm.html
+++ b/templates/_pages/pagecity.show.sm.html
@@ -9,13 +9,18 @@
         {/foreach}
     </div>
     {if $city.pc_city_id > 0}
-    <a id="city_map_link" href="map.html" title="Большая карта достопримечательностей {$city.pc_inwheretext}">на весь экран</a>
+    <a id="city_map_link" href="/map/#center={$city.pc_longitude},{$city.pc_latitude}&zoom={$city.pc_zoom+1}" title="Большая карта достопримечательностей {$city.pc_inwheretext}">на весь экран</a>
     {/if}
 </div>
 {/if}
 <div id="citytext">
-    <div class="city_weather" data-lat="{$city.pc_latitude}" data-lon="{$city.pc_longitude}" title="погодные условия">
-        <img src="/img/preloader/horizontal.gif" title="идет загрузка погоды" alt="идет загрузка" style="vertical-align: middle" />
+    <div id="city_float">
+        <div class="city_weather" data-lat="{$city.pc_latitude}" data-lon="{$city.pc_longitude}" title="погодные условия">
+            <img src="/img/preloader/horizontal.gif" title="идет загрузка погоды" alt="идет загрузка" style="vertical-align: middle" />
+        </div>
+        <div class="city_metadata" title="информация" data-pcid="{$city.pc_id}">
+            <img src="/img/preloader/horizontal.gif" title="идет загрузка" alt="идет загрузка" style="vertical-align: middle" />
+        </div>
     </div>
     {$city.pc_text}
 </div>
