--- a/templates/_pages/pagecity.show.sm.html
+++ b/templates/_pages/pagecity.show.sm.html
@@ -19,7 +19,14 @@
             <img src="/img/preloader/horizontal.gif" title="идет загрузка погоды" alt="идет загрузка" style="vertical-align: middle" />
         </div>
         <div class="city_metadata" title="информация" data-pcid="{$city.pc_id}">
-            <img src="/img/preloader/horizontal.gif" title="идет загрузка" alt="идет загрузка" style="vertical-align: middle" />
+            <table>
+                {foreach from=$city.metas item=meta}
+                <tr>
+                    <td>{$meta.cf_title}:</td>
+                    <td>{$meta.cd_value}</td>
+                </tr>
+                {/foreach}
+            </table>
         </div>
     </div>
     {$city.pc_text}
